...
  @override
  Widget build(BuildContext context) {
    final carritoService = CarritoService();

    return Scaffold(
      appBar: AppBar(
        title: const Text('Mi Carrito de Exámenes'),
        backgroundColor: AppStyles.primaryDark,
        foregroundColor: Colors.white,
        actions: [
          ValueListenableBuilder<List<Examen>>(
            valueListenable: carritoService.examenesEnCarritoListenable,
            builder: (context, examenes, child) {
...
                        ),
                      );
                    },
                    icon: const Icon(Icons.local_shipping_outlined,
                        color: Colors.white),
                    label: Text(
                      'Procesar Solicitud (${examenes.length} Exámenes)',
                      style: const TextStyle(fontSize: 18, color: Colors.white),
                    ),
                    style: ElevatedButton.styleFrom(
                      backgroundColor: Colors.green,
                      padding: const EdgeInsets.symmetric(vertical: 15),
                      shape: AppStyles.cardShape,
...
