...
          BottomNavigationBarItem(
            icon: Icon(Icons.science_outlined),
            label: 'Análisis',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.book_outlined),
            label: 'Manual',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.area_chart_outlined),
            label: 'Estadísticas',
          ),
        ],
...
